--- a/src/app/components/p-type/p-type.component.html
+++ b/src/app/components/p-type/p-type.component.html
@@ -10,9 +10,9 @@
     loading data
   </div>
   <ng-template #showData>
-      <h4 class="center">Countries</h4>  
-<!--       <div *ngFor="let country of countries">
-          <p>{{ country.name }}</p>
-      </div> -->
+      <h4 class="center">Pokemon Types</h4>  
+       <div *ngFor="let type of types">
+          <p>{{ type }}</p>
+      </div> 
   </ng-template>
 </section>
